Fixed UI glitch where the add new psot/refugee view was getting cut off

--- a/deliverable-2/frontend/src/components/VolunteerDash/VolunteerDash.css
+++ b/deliverable-2/frontend/src/components/VolunteerDash/VolunteerDash.css
@@ -8,6 +8,7 @@
     align-items: center;
     justify-content: space-between;
 
+    position: fixed;
     box-sizing: border-box;
     height: 7vh;
     width: 100%;
@@ -31,8 +32,11 @@
 }
 
 .refugeedash {
-    /* margin-top: 7vh; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     box-sizing: border-box;
+    margin-top: 7vh;
     padding: 1px;
 }
 
@@ -43,9 +47,9 @@
     box-sizing: border-box;
 
     position: fixed;
+    margin: auto;
     width: 100%;
     height: 100%;
-    margin: auto;
     z-index: 100;
 
     background-color: rgba(200, 200, 200, 0.4);
@@ -58,8 +62,8 @@
 
     width: 800px;
     height: 850px;
-    margin: 3.5rem;
     padding: 1rem 2rem;
+    margin-top: 0.75rem;
 
     background-color: white;
     box-shadow: 0px 5px 10px 0px rgb(138 134 138);
